--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     methods,
     progress,
     stats,
-    SummarizedExperiment
+    SummarizedExperiment,
+    invgamma
 biocViews: ImmunoOncology, 
 	Software,
     StatisticalMethod,
