--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(MpraObject)
 export(analyzeComparative)
 export(analyzeQuantification)
 export(estimateDepthFactors)
+export(estimateRandomEffectVariance)
 export(getAlpha)
 export(getDistrParam_DNA)
 export(getDistrParam_RNA)
@@ -31,7 +32,20 @@ import(BiocParallel)
 import(methods)
 import(progress)
 import(stats)
+importFrom(DESeq2,vst)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
+importFrom(dplyr,across)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(magrittr,`%>%`)
+importFrom(magrittr,set_rownames)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyselect,all_of)
