--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ exportMethods(rnaCounts)
 exportMethods(rnaDepth)
 exportMethods(rowAnnot)
 import(BiocParallel)
+import(invgamma)
 import(methods)
 import(progress)
 import(stats)
@@ -37,13 +38,15 @@ importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
-importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_map)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
-importFrom(dplyr,summarise)
+importFrom(fitdistrplus,fitdist)
+importFrom(lme4,VarCorr)
+importFrom(lme4,lmer)
 importFrom(magrittr,`%>%`)
 importFrom(magrittr,set_rownames)
 importFrom(tidyr,pivot_longer)
