--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ exportMethods(rnaCounts)
 exportMethods(rnaDepth)
 exportMethods(rowAnnot)
 import(BiocParallel)
-import(invgamma)
 import(methods)
 import(progress)
 import(stats)
@@ -45,6 +44,9 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(fitdistrplus,fitdist)
+importFrom(invgamma,dinvgamma)
+importFrom(invgamma,pinvgamma)
+importFrom(invgamma,qinvgamma)
 importFrom(lme4,VarCorr)
 importFrom(lme4,lmer)
 importFrom(magrittr,`%>%`)
