--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(fitdistrplus,fitdist)
 importFrom(lme4,VarCorr)
+importFrom(lme4,isSingular)
 importFrom(lme4,lmer)
 importFrom(magrittr,`%>%`)
 importFrom(magrittr,set_rownames)
